--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ src/**/*.js
 !src/karma.conf.js
 *.js.map
 
+runtime/**/*.js
+runtime/**/*.js.map
 database-backup.js
 database-backup.js.map
 fullscreenHander.js
