--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "pulsar",
-  "version": "0.0.3",
+  "version": "0.1.5",
   "description": "POS (Point Of Sell) application",
   "homepage": "https://github.com/arslanmughal5566/Pulsar",
   "author": {
-    "name": "Imperial Technology",
-    "email": "arslanmughal5566@outlook.com"
+    "name": "Imperial Technologies",
+    "email": "pospulsar@gmail.com"
   },
   "repository": {
     "type": "git",
