Fixed material issue

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "POS (Point Of Sell) application",
   "homepage": "https://github.com/arslanmughal5566/Pulsar",
   "author": {
-    "name": "Imperial Technology",
-    "email": "arslanmughal5566@outlook.com"
+    "name": "Graviton",
+    "email": "contact@gravitonapps.com"
   },
   "repository": {
     "type": "git",
@@ -38,7 +38,7 @@
     "electron:serve": "wait-on http-get://localhost:4200/ && npm run electron:serve-tsc && electron . --serve",
     "electron:local": "npm run build:prod && electron .",
     "electron:linux": "npm run build:prod && electron-builder build --linux",
-    "electron:windows": "npm run build:prod && electron-builder build --x64 --ia32 --windows --publish always",
+    "electron:windows": "npm run build:prod && electron-builder build --x64 --ia32 --windows",
     "electron:mac": "npm run build:prod && electron-builder build --mac",
     "test": "npm run postinstall:web && ng test",
     "e2e": "npm run build:prod && mocha --timeout 300000 --require ts-node/register e2e/**/*.spec.ts",
@@ -46,17 +46,17 @@
     "lint": "ng lint"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.800.2",
-    "@angular/cli": "8.0.2",
-    "@angular/common": "8.0.0",
-    "@angular/compiler": "8.0.0",
-    "@angular/compiler-cli": "8.0.0",
-    "@angular/core": "8.0.0",
-    "@angular/forms": "8.0.0",
-    "@angular/language-service": "8.0.0",
-    "@angular/platform-browser": "8.0.0",
-    "@angular/platform-browser-dynamic": "8.0.0",
-    "@angular/router": "8.0.0",
+    "@angular-devkit/build-angular": "^0.1001.0",
+    "@angular/cli": "^10.0.0",
+    "@angular/common": "10.1.0",
+    "@angular/compiler": "10.1.0",
+    "@angular/compiler-cli": "10.1.0",
+    "@angular/core": "10.1.0",
+    "@angular/forms": "10.1.0",
+    "@angular/language-service": "10.1.0",
+    "@angular/platform-browser": "10.1.0",
+    "@angular/platform-browser-dynamic": "10.1.0",
+    "@angular/router": "10.1.0",
     "@ngx-translate/core": "11.0.1",
     "@ngx-translate/http-loader": "4.0.0",
     "@types/jasmine": "3.3.13",
@@ -75,18 +75,18 @@
     "electron-reload": "1.4.0",
     "jasmine-core": "3.4.0",
     "jasmine-spec-reporter": "4.2.1",
-    "karma": "4.1.0",
+    "karma": "^5.2.1",
     "karma-chrome-launcher": "2.2.0",
     "karma-coverage-istanbul-reporter": "2.0.5",
     "karma-jasmine": "2.0.1",
     "karma-jasmine-html-reporter": "1.4.2",
-    "mocha": "6.1.4",
+    "mocha": "^8.1.3",
     "npm-run-all": "4.1.5",
     "rxjs": "6.5.2",
-    "spectron": "5.0.0",
+    "spectron": "^11.1.0",
     "ts-node": "8.2.0",
     "tslint": "5.17.0",
-    "typescript": "~3.4.5",
+    "typescript": "4.0.2",
     "wait-on": "3.2.0",
     "webdriver-manager": "12.1.5",
     "zone.js": "0.9.1"
@@ -95,9 +95,10 @@
     "node": ">=10.9.0"
   },
   "dependencies": {
-    "@angular/animations": "^8.2.1",
-    "@angular/cdk": "^8.1.3",
-    "@angular/material": "^8.1.2",
+    "@angular/animations": "10.1.0",
+    "@angular/cdk": "8.0.0",
+    "@angular/forms": "^10.0.0 || ^11.0.0-0",
+    "@angular/material": "8.0.0",
     "@types/nedb": "^1.8.8",
     "chart.js": "^2.8.0",
     "copy-text-to-clipboard": "^2.1.0",
